--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,18 @@
 # PyCharm
 .idea/
 *.iml
-__pycache__/
-.venv/
 
-# Системные файлы
-*.log
+# Python
+__pycache__/
+*.pyc
+*.pyo
+
+# Virtual env
+venv/
+.venv/
+env/
+
+# System
 .DS_Store
 
-# Временные файлы
-*.tmp
-
-# Не хотим в репозитории
-27.txt
-27xd/
-usb_events.log
-
-# Исходники (можно добавить позже)
-dsa.py
-script.py
-server.py
-u.py
-EOFcat > .gitignore << EOF
-# PyCharm
-.idea/
-*.iml
-__pycache__/
-.venv/
-
-# Системные файлы
-*.log
-.DS_Store
-
-# Временные файлы
-*.tmp
-
-# Не хотим в репозитории
-27.txt
-27xd/
-usb_events.log
-
-# Исходники (можно добавить позже)
-dsa.py
-script.py
-server.py
-u.py
+# Tests
